# voorisync

./: .gitignore  README.md  pyproject.toml  voorisync.py
